--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dj-events",
+  "name": "dj-events__frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "next": "^11.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sass": "^1.38.0"
   },
   "devDependencies": {
-    "@types/react": "17.0.19",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
-    "typescript": "4.3.5"
+    "@emotion/babel-plugin": "^11.3.0",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "@types/react": "^17.0.19",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.1.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "typescript": "^4.3.5"
   }
 }
